# CitySynthDemo

./: .eslintrc.json  .gitignore  README.md  asset-manifest.json  audio.js  index.html  jsconfig.json  package-lock.json  package.json  precache-manifest.0a546081cafe09d189ec58349b1410be.js  precache-manifest.28410e60612140c64a7bc154f9e35327.js  precache-manifest.3143e2d2bfab0a0d5bfcf2e32e6c990a.js  precache-manifest.3391316d18236559f308723ef5c0740a.js  precache-manifest.3443a32abdfcd66321b4903897c89d54.js  precache-manifest.38d2d4a6e76f14b1634193f84ba667ff.js  precache-manifest.443b3aff0ac124826e5557ff78f2f472.js  precache-manifest.4dfb292b0ed5dcbbb2ca5f2cc5bbc5b0.js  precache-manifest.b795bedb6ee58bc7b8ebebda1bcda21f.js  precache-manifest.d23fc8c7c796ff42c20e72434108571e.js  service-worker.js  tsconfig.json
crate/: Cargo.toml
crate/src/: audio.rs  lib.rs
css/: layout.css  media-queries.css
js/: init.js
public/: audio.js  citysynth_wasm.js  index.html  manifest.json
public/css/: default.css  layout.css
public/js/: init.js
public/wasm-synth/: citysynth_wasm.js  citysynth_wasm.wasm  citysynth_wasm_bg.wasm  package.json
res/csharp/: factorypresets.sdp
scripts/build-wasm/: audio.seed.js  build-wasm.js  package.json
src/: App.jsx  citysynth_wasm.js  index.jsx  resumeData.js  store.js  workerActions.js
src/common/: index.js
src/components/: SynthWindow.jsx  index.js
src/redux/: actionTypes.js  helper.js  reducers.js  types.js
wasm-synth/: citysynth_wasm.d.ts  citysynth_wasm_bg.d.ts  citysynth_wasm_bg.wasm  citysynth_wasm_bg.wat
(+106 files in other folders)
